Fix deprecation in java 11.
Signed-off-by: Achim Kraus <achim.kraus@bosch.io>